# kaien

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml  kaien.db  kaien_seed.py  notes.md  pyproject.toml  requirements.in  requirements.txt  verify_system.py
cli/: __init__.py  main.py
client/: __init__.py  app.py  cli.py
client/cli/: main.py
client/templates/: index.html
config/: config.yaml
data/kaien_db/: chroma.sqlite3
extensions/system_ext/: server.py
extensions/system_ext/protos/: system.proto
gui/: app.py
kaien_core/: agent.py  config.py  llm_handler.py  mcp_client.py  prompt_builder.py
modules/: __init__.py  brain.py  dev_agent.py  developer.py  mcp_client.py  memory.py  osint.py  research.py  research_agent.py  sandbox.py  shell_agent.py  tools_schema.py
protos/: system.proto
scripts/: generate_protos.sh
server/: __init__.py  agent_client.py  api.py  config.py  database.py  dependencies.py  main.py  mcp_client.py  requirements.txt  run.py  schemas.py  state.py  tools.py
server/core/: memory_manager.py  tool_manager.py
server/data/kaien_db/: chroma.sqlite3
server/database/: session_db.py  vector_db.py
server/models/: __init__.py  message.py  tool.py
server/tools/: dev_agent.py  shell_agent.py
shared/: __init__.py  config.py
src/kaien/: config.py  main.py
src/kaien/agent/: factory.py  graph.py
src/kaien/memory/: db.py
src/kaien/tools/: system.py
